deploy/test/backend/meetingserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-meetingserver-v2
  name: opengauss-meetingserver-v2
